--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,1 +1,10 @@
-<p>shopping-list works!</p>
+<div class="row">
+  <div class="col-xs-10">
+    <app-shopping-edit></app-shopping-edit>
+    <hr />
+    <ul class="list-group">
+      <!--suppress HtmlUnknownTag -->
+      <a class="list-group-item" style="cursor: pointer"> </a>
+    </ul>
+  </div>
+</div>
