--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -4,7 +4,13 @@
     <hr />
     <ul class="list-group">
       <!--suppress HtmlUnknownTag -->
-      <a class="list-group-item" style="cursor: pointer"> </a>
+      <a
+        class="list-group-item"
+        style="cursor: pointer"
+        *ngFor="let ingredient of ingredients"
+      >
+        {{ ingredient.name }} ({{ ingredient.amount }})
+      </a>
     </ul>
   </div>
 </div>
