--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,7 @@
-<a href="#" class="list-group-item clearfix">
+<!--1. Egy listaelemre klikkeléskor az onSelect metóduson keresztül
+ kibocsátásra kerül (emit) a recipe-list-ből is látható  (@Output)
+ recipeSelected tulajdonság  -->
+<a href="#" class="list-group-item clearfix" (click)="onSelect()">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">{{ recipe.description }}</p>
